--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -27,7 +27,7 @@ In our example we will use `CarManufacturer` as our reference.
 ## Running the Scaffold
 Run the scaffold command and follow the questions. Let's go through all the questions in detail:
 ##### 1. Enter the name of the initial data model
-Name of the API model. The GraphQL queries, mutations, responses, and variable names in the code will use this value in singular and plural, kebab-case, camel-case or some other form.
+Name of the API data model. The GraphQL queries, mutations, responses, and variable names in the code will use this value in singular and plural, kebab-case, camel-case or some other form.
 
 ```graphql title="graphql.ts"
 type CarManufacturer {
@@ -194,7 +194,7 @@ Be aware that the resolver should be under the `CarManufacturerQuery` or `CarMan
 ## Building the Code
 When you make changes to the code, make sure you run `yarn webiny ws run build --folder=packages/car-manufacturers/api` to actually compile your code for the deployment.
 
-You can even have watch running for your code with `yarn webiny ws run watch --folder=packages/car-manufacturers/api`.
+You can even have a watcher running for your code with `yarn webiny ws run watch --folder=packages/car-manufacturers/api`.
 
 Of course, the `folder` value is your package location.
 
