--- a/docs/tutorials/create-an-application/intro.mdx
+++ b/docs/tutorials/create-an-application/intro.mdx
@@ -19,12 +19,12 @@ You can read on how to install it in our [Install Webiny](../install-webiny) art
 
 ## Scaffold
 
-You will use `yarn webiny scaffold` to start the scaffolding.
+You will use `yarn webiny scaffold` to start the scaffolding, and you run it from the root of the project.
 The process is quite simple as we show you a list of possible scaffolds which you can select.
 We then show you a question by question or a statement by statement and you provide some answer to it.
 
 For example, in our API scaffold process you have a request: `Enter the name of the initial data model`. You just need to type the name of the data model, let's say `Car`.
-And continue through the rest of the questions until the scaffolding process is done.
+Continue through the rest of the questions until the scaffolding process is done.
 
 ## Workspaces
 
