--- a/docs/tutorials/create-a-package-in-monorepo.mdx
+++ b/docs/tutorials/create-a-package-in-monorepo.mdx
@@ -7,21 +7,24 @@ description: Learn how to share code by creating a package in monorepo
 ---
 
 :::tip What You’ll Learn
-- how to create a package in monorepo
+- how to create a new package in monorepo
 - how to organize files in monorepo
 :::
 
 ## Overview
-We often need to share code between multiple packages.
-Doing so in a large project can be a chore. Fortunately every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization).
+We often need to share code between multiple packages in our project.
+:::info
+Every Webiny project consists of packages and project applications, you can learn more about them in our [key topics](/docs/key-topics/project-organization/project-applications-and-packages).
+:::
+Every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization).
 In this tutorial, you will learn how to organize and share code between multiple packages in a monorepo.
 Let's get started.
 
 ## What We'll Build
-In this tutorial, we'll be building a frontend package written in react and see how we can share it between multiple packages.
+In this tutorial, we'll be building a package that contains a simple React component and see how we can share it between multiple packages.
 But, you can create a package for backend code as well using similar principles.
 
-Here is the file structure of an example package:
+Here is the file structure of the package we're about to build:
 ```
 // Some files are omitted for the sake of brevity.
 
@@ -46,7 +49,7 @@ Here is the file structure of an example package:
 
 ## Prerequisites
 
-1. **A Webiny Project**
+**A Webiny Project**
 
 This tutorial assumes you have already created a new Webiny project to work on.
 We recommend reading our [install Webiny](/docs/tutorials/install-webiny) tutorial which shows you how to do it.
@@ -59,9 +62,10 @@ The Yarn workspaces aim to make working with monorepos easy.
 Learn more about [workspaces](https://yarnpkg.com/features/workspaces) here.
 :::
 
-One question you may ask is: **Where is this workspaces list is located?**
+### The Workspaces List
+Before we continue, let's quickly cover the workspaces list, located in the `package.json` file in your project root.
 
-The list of all workspaces can be found in the package.json file, located in your project root, for example:
+The content of the package looks as shown below: 
 
 ```
 (...)
@@ -95,12 +99,17 @@ First, create a folder called `packages` where we add our custom package.
 Packages are just regular NPM packages, or in other words, folders with their own package.json
 :::
 
-Let's create a folder called `greeting` inside `packages`. Now you need to create a `package.json` file in that folder.
-You can add it manually or use the following command:
+Let's create a folder called `greeting` inside `packages`.
+Now that we've created our new folder, let's initialize a new package in it.
+For that we need to create a `package.json` file inside that folder.
+
+You can add it manually or use the following command inside the newly created folder:
 
 ```
 yarn init
 ```
+
+Once we execute the above command, we will be presented with a couple of questions as shown below:
 
 <!-- vale off -->
 
@@ -112,7 +121,11 @@ yarn init
 
 <!-- vale on -->
 
-Depending upon your inputs the generated `package.json` file's content may look different from what is shown below:
+:::info
+You can also run `yarn init -y` to use sensible defaults.
+:::
+
+Depending upon your inputs the generated `package.json` file's content may look similar to the following:
 
 ```json
 {
@@ -125,10 +138,28 @@ Depending upon your inputs the generated `package.json` file's content may look 
 ```
 
 :::note
-The name property defined in the package's `package.json` will be used to later import it.
+The `name` property defined in the package's `package.json` will be used to later import it.
 :::
 
-Next, create a `src` folder inside `packages/greeting` and then add the `index.tsx` file inside it with the following code:
+Now that we've initialized a new package, let's start by adding a couple of files.
+
+```
+├── packages
+|   |   // This is our new package
+│   └── gretting
+│       ├── src
+│       │   └── index.tsx
+│       ├── .babelrc.js
+│       ├── README.md
+│       ├── package.json
+│       ├── tsconfig.build.json
+│       └── tsconfig.json
+└── yarn.lock
+
+```
+
+First, we are going to add the source code.
+For that create a `src` folder inside `packages/greeting` and then add the `index.tsx` file inside it with the following code:
 
 ```tsx title="packages/greeting/src/index.tsx"
 import React from "react";
@@ -141,10 +172,10 @@ export default WelcomeMessage;
 ```
 
 :::note
-Here we're creating a very simple component. But, you can write whatever logic you need for your project.
+Here we're creating a very simple React component. But, you can write whatever logic you need for your project.
 :::
 
-Now that we've our desired code in place. We can move to the next step which is adding the required configuration files.
+Now that we have our desired code in place. We can move to the next step which is adding the required configuration files.
 
 To build our package, we need to add the following configuration files:
 - `package.json`
@@ -234,6 +265,8 @@ After that, we add the following scripts inside the `package.json` file:
 
 And finally, we add `publishConfig` which is a set of configuration values that are being used at publish-time.
 
+In other words, when you run the `npm publish` command to publish a package to the registry so that it can be installed by name.
+
  ```json title="packages/greeting/package.json"
 {
   (...)
@@ -265,7 +298,7 @@ And finally, we add `publishConfig` which is a set of configuration values that 
 ```
 
 :::info
-Learn more about [`publishConig`](https://docs.npmjs.com/cli/v7/configuring-npm/package-json#publishconfig).
+Learn more about [`publishConfig`](https://docs.npmjs.com/cli/v7/configuring-npm/package-json#publishconfig).
 :::
 
 
