fix: use title case

--- a/docs/webiny-overview/performance-benchmark/introduction.mdx
+++ b/docs/webiny-overview/performance-benchmark/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 id: introduction
-title: Performance benchmark
+title: Performance Benchmark
 sidebar_label: Introduction
 keywords: ["serverless", "performance", "benchmark"]
 description: Webiny performance benchmark.
