fix: update titles/subtitles to use title case

--- a/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
@@ -12,7 +12,7 @@ description: Learn how to upgrade Webiny from 5.0.0-beta.4 to 5.0.0.
 
 :::
 
-## How to upgrade
+## How to Upgrade
 
 :::danger IMPORTANT
 
@@ -26,7 +26,7 @@ If you still want to upgrade your project manually, follow these steps below in 
 All file paths in the instructions below are considered to start in your project root directory.
 :::
 
-### Upgrade yarn
+### Upgrade Yarn
 Webiny now works with [yarn 2](https://yarnpkg.com/) exclusively. It's a big improvement over yarn 1.x in both speed and reliability when it comes to package upgrades.
 
 - run the following command in the root of your Webiny project:
@@ -43,7 +43,7 @@ yarn set version berry
 yarn install
 ```
 
-### Upgrade project files
+### Upgrade Project Files
 
 Now we need to apply some changes to the project itself:
 
@@ -167,7 +167,7 @@ yarn up "@webiny/*@5.0.0"
 
 **Congratulations!** :tada: This is all you need to do with your project files. Now you can [deploy your project](/docs/how-to-guides/deployment/deploy-your-project), open your `admin` app and go through the upgrade wizard which will migrate your data and Elasticsearch indexes.
 
-### Optional steps
+### Optional Steps
 
 If you plan to develop your own packages, and run Jest tests, you'll want to apply these changes as well:
 
