--- a/docs/how-to-guides/upgrade-webiny/overview.mdx
+++ b/docs/how-to-guides/upgrade-webiny/overview.mdx
@@ -12,7 +12,7 @@ description: Learn how to upgrade your Webiny project.
 - how to upgrade Webiny to a specific version
 :::
 
-## How to upgrade
+## How to Upgrade
 
 :::caution
 The following guide does not apply if you're interested in doing a major version upgrade, for example upgrading from version 4 to version 5.
