fix: code format

--- a/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
@@ -27,6 +27,7 @@ All file paths in the instructions below are considered to start in your project
 :::
 
 ### Upgrade Yarn
+
 Webiny now works with [yarn 2](https://yarnpkg.com/) exclusively. It's a big improvement over yarn 1.x in both speed and reliability when it comes to package upgrades.
 
 - run the following command in the root of your Webiny project:
@@ -147,8 +148,8 @@ export const handler = createHandler(
 
 ```js
 require("@webiny/cli-plugin-scaffold").default(),
-  require("@webiny/cli-plugin-scaffold-graphql-service").default(),
-  require("@webiny/cli-plugin-scaffold-admin-app-module").default();
+require("@webiny/cli-plugin-scaffold-graphql-service").default(),
+require("@webiny/cli-plugin-scaffold-admin-app-module").default()
 ```
 
 - run the following command to remove all `node_modules` from your project:
