fix: add dot at the end of the sentence

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -107,7 +107,7 @@ If, at any point in time, you wish to disable this behaviour, you can do it with
 
 ## Troubleshooting
 
-#### Deploying my project takes a long time to finish
+#### Deploying my project takes a long time to finish.
 
 We're aware of this fact, and this is mainly because of the [Amazon ElasticSearch Service](https://aws.amazon.com/elasticsearch-service/). While other cloud infrastructure resources get deployed reasonably fast, this service can take anywhere from 15 to 30 minutes to become ready.
 
