fix: add "disable-tracking" command to the list of common command

--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -10,9 +10,10 @@ import Theme from "../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you'll learn
+
 - what is the Webiny CLI
 - what are the commonly used commands
-:::
+  :::
 
 ## Overview
 
@@ -62,11 +63,19 @@ Runs provided command, for example the `watch` command, across multiple workspac
 For more information, please visit the [Working With Workspaces](/docs/how-to-guides/webiny-cli/working-with-workspaces) guide.
 :::
 
+### `yarn webiny disable-tracking`
+
+Completely disables collection of anonymous usage information.
+
+:::caution Telemetry
+By default, Webiny collects anonymous usage information, which is exclusively used for improving the product and understanding usage patterns. Please take a look at our [Telemetry](https://www.webiny.com/telemetry/) page for more information on this subject.
+:::
+
 ## FAQ
 
 #### Do I need to install Webiny CLI manually?
 
-No, Webiny CLI comes set up automatically with every new Webiny project. Note that it's not installed as a global tool, bu  on a per-project basis. So, in theory, you could have two projects with different versions of the CLI.
+No, Webiny CLI comes set up automatically with every new Webiny project. Note that it's not installed as a global tool, bu on a per-project basis. So, in theory, you could have two projects with different versions of the CLI.
 
 #### Do I need to invoke the Webiny CLI with `yarn`?
 
