--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -46,35 +46,19 @@ Before proceeding, make sure you have the following:
 
 ---
 
-## Project setup
+## Project Setup
 
 Once you have all the prerequisites in place, we recommend creating a new Webiny project using `create-webiny-project` - a tool that sets everything up automatically for you. So, in your terminal of choice, run the following command:
 
 ```
-npx create-webiny-project@beta my-new-project --tag beta
+npx create-webiny-project my-new-project
 ```
 
 From there, follow the on-screen setup instructions, which includes answering a couple of project-related questions, and doing your first deployment.
 
-### Custom or the default VPC - what should you choose?
+## First Deployment
 
-During the setup, one of the questions that shows up is should your new project be deployed in a custom [Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/) or the default one. The answer to that question depends on your needs.
-
-If you're deploying this for development purposes, or you're working on a project prototype, it's reasonable to use the default VPC deployment. This is because all of the cloud resources that are needed for this setup are [free-tier](https://aws.amazon.com/free/) eligible. And, having a bit less secure system probably doesn't impose a problem at this point in time.
-
-On the other hand, if we're talking about production deployment, then deploying resources inside of a custom VPC is recommended. Although this does incur a cost, it significantly improves your project's security posture.
-
-:::info Still not sure?
-If you're still not sure what to choose, go for the no-VPC setup. If needed, you can still do the switch down the road.
-:::
-
-:::tip Cloud Infrastructure
-Learn what gets deployed into the cloud (your AWS account) and how it all works in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/introduction) key topics section.
-:::
-
-## First deployment
-
-Once your new project has been created, it's time to deploy it to your AWS account.
+Once your new project has been created, it's time to deploy it into your AWS account.
 
 To do that, in your terminal, navigate to your project folder, and run the following command:
 
@@ -82,27 +66,30 @@ To do that, in your terminal, navigate to your project folder, and run the follo
 yarn webiny deploy
 ```
 
-This builds all the code and deploys it to your AWS account, along with the necessary cloud infrastructure resources.
+By executing this command, all of the project applications will first get built, and, along with needed cloud infrastructure resources, deployed into your AWS account.
+
+:::info Project Applications
+Learn more about project applications and project organization in general, in the [Project Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) key topic.
+:::
+
+:::tip Cloud Infrastructure
+Learn what gets deployed into your AWS account and how it all works in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/introduction) key topics section.
+:::
 
 Note that the first deployment can take up to 20 minutes! So, even though it might look nothing is happening in the terminal, please be patient and let the process finish. If something went wrong, an error will be shown.
-
 
 Finally, once the deployment has been done, you are presented with the URL over which you can access your Admin Area, and finish the installation.
 
 ![Admin Area - Installation Wizard](./install-webiny/installation-wizard.png)
 
-:::info What is deployed into my AWS account?
-To learn more about the cloud architecture and the resources that are deployed into your AWS account, click here.
-:::
-
-:::tip Misplaced Admin area URL?
+:::info Misplaced Admin area URL?
 Running the `yarn webiny info` command in your Webiny project folder will give you all of the relevant project URLs.
 :::
 
 :::caution Telemetry
 Please note that, by default, Webiny collects anonymous usage information, which is exclusively used for improving the product and understanding usage patterns. Please take a look at our [Telemetry](https://www.webiny.com/telemetry/) page for more information on this subject.
 
-If, at any point in time, you wish to disable this behaviour, you can do it with the Webiny CLI, by running the following command: `yarn webiny disable-tracking`.
+If, at any point in time, you wish to disable this behaviour, you can do it with the [Webiny CLI](/docs/key-topics/webiny-cli), by running the following command: `yarn webiny disable-tracking`.
 :::
 
 ## Troubleshooting
