fix: use title case

--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
@@ -1,7 +1,7 @@
 ---
 id: create-a-webiny-headless-cms-address-field-plugin
 title: Create a Webiny Headless CMS address field plugin
-sidebar_label: Address field plugin
+sidebar_label: Address Field Plugin
 keywords: ["webiny", "project", "install", "setup", "create"]
 description: Create a Webiny Headless CMS address field plugin.
 ---
