--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -18,7 +18,7 @@ Webiny is currently in a beta stage. The documentation is not yet complete. We'r
 
 Welcome! 👋 **Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of the serverless infrastructure, like AWS Lambda, DynamoDB, S3, and others. Support for other cloud vendors besides AWS is coming.
 
-We believe that serverless is the future of development. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. Those tools do that well. But when it comes to architecting and coding an application your set of options is very limited. This is where Webiny comes in. 
+We believe that serverless is the future of development. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. Those tools do that well. But when it comes to architecting and coding an application your set of options is very limited. This is where Webiny comes in.
 
 You can read more about Webiny and our philosophy below, but in case you want to immediately give Webiny a try, just follow the installation tutorial.
 
@@ -28,12 +28,12 @@ You can read more about Webiny and our philosophy below, but in case you want to
 
 ---
 
-## Our mission
+## Our Mission
 
 > **Create the foundation for building serverless solutions. **
 
 
-## Webiny overview
+## Webiny Overview
 
 With Webiny you can build:
 
@@ -59,16 +59,20 @@ Webiny is build using a modern development toolchain that makes the experience f
 - [Pulumi](http://pulumi.com)
 - and more
 
+:::info
+To learn more, please take a look at the [Tools and Libraries](/docs/key-topics/tools-libraries) key topic.
+:::
+
 ### Products
 
-Webiny comes with 2 products which are both installed when you setup 
-your instance. 
+Webiny comes with 2 products which are both installed when you setup
+your instance.
 
-#### Serverless Application framework
+#### Serverless Application Framework
 
-This is the core of Webiny. It's a framework created specifically for building serverless solutions. The framework handles the deployment workflow, code bundling, project organization, and provides a ready-made architecture. It also includes an ACL module, GraphQL API and a Admin Panel SPA app. 
+This is the core of Webiny. It's a framework created specifically for building serverless solutions. The framework handles the deployment workflow, code bundling, project organization, and provides a ready-made architecture. It also includes an ACL module, GraphQL API and a Admin Panel SPA app.
 
-The goal of the framework is to provide a ready-made solution that you can use in a matter of minutes. Developers should no longer deal with the complexities that come with using serverless infrastructure. 
+The goal of the framework is to provide a ready-made solution that you can use in a matter of minutes. Developers should no longer deal with the complexities that come with using serverless infrastructure.
 
 :::caution Cloud support
 At the moment Webiny only runs on the AWS cloud. It you wish to help us add support for another cloud provider, please see [this issue](https://github.com/webiny/webiny-js/issues/1150).
@@ -78,7 +82,7 @@ At the moment Webiny only runs on the AWS cloud. It you wish to help us add supp
 
 You might find it odd having a CMS as part of a framework. Our team spent more than 12 years building client-based solutions and many of the projects required some sort of a content management feature. In an ideal world we wanted to have a framework and a CMS combo, so we created one.
 
-Webiny Serverless CMS is created with our framework. It's the best real-life example of what you can build with it and it provides you with many samples and references for your own apps. 
+Webiny Serverless CMS is created with our framework. It's the best real-life example of what you can build with it and it provides you with many samples and references for your own apps.
 
 The Serverless CMS is completely optional. It's installed by default, but if not needed you can easily remove it.
 
@@ -88,7 +92,7 @@ Serverless CMS is not a library that you can embed in other applications. It's a
 
 ---
 
-## Our philosophy
+## Our Philosophy
 
 Webiny is created with 3 main goals in mind:
 - provide a customizable solution
@@ -97,7 +101,7 @@ Webiny is created with 3 main goals in mind:
 
 Webiny at its core doesn't do much. Over 90% of Webiny's code is actually inside plugins. From how the Webiny CLI deploys your build, to how the API checks the user permissions, to the Webiny logo in side the Admin panel. Those are all plugins. This approach allowed us to build a platform that is flexible in every meaning of the word. You can completely replace existing plugins, turn them on or off or expand on them, customizing Webiny to fully fit your needs. An added benefit of this approach is that your plugins live outside the Webiny's core codebase, making upgrades much easier.
 
-Another great thing about the plugin system is that it's unified across the board. It doesn't matter if you're changing the CLI functionality, adding new GraphQL resolvers or a new button in the UI, the approach is always the same. This makes it easy for anyone to pickup and understand how the whole system works. 
+Another great thing about the plugin system is that it's unified across the board. It doesn't matter if you're changing the CLI functionality, adding new GraphQL resolvers or a new button in the UI, the approach is always the same. This makes it easy for anyone to pickup and understand how the whole system works.
 
 Webiny believes in having a great developer experience. From first installing your project to deploying it and seeing it live all that's needed are 2 commands. Webiny handles all the heavy lifting under the hood, but in a transparent way, not hiding anything, or making it hard to understand. Less abstraction means better understanding of the system.
 
@@ -155,7 +159,7 @@ We welcome anyone who wishes to be a part of our project and help us achieve our
 
 ---
 
-## Staying informed
+## Staying Informed
 
 Our project and documentation is constantly improving and changing. Anything important we post to our [blog](https://www.webiny.com/blog) and our [newsletter](https://landing.mailerlite.com/webforms/landing/g9f1i1).
 
@@ -163,7 +167,7 @@ Additionally you can find useful information on our twitter [@WebinyPlatform](ht
 
 ---
 
-## Something missing?
+## Something Missing?
 
 If something is missing in the documentation, or you've found a part that's confusing, please report an [issue to our docs repository](https://github.com/webiny/docs.webiny.com/issues/new).
 
