fix: update article title

--- a/docs/how-to-guides/upgrade-webiny/overview.mdx
+++ b/docs/how-to-guides/upgrade-webiny/overview.mdx
@@ -18,7 +18,7 @@ description: Learn how to upgrade your Webiny project.
 The following guide does not apply if you're interested in doing a major version upgrade, for example upgrading from version 4 to version 5.
 :::
 
-> When planning an upgrade, always check if there's a dedicated article for your specific Webiny version. All the articles are located in the menu on the left. For example: `Upgrading 5.0.0-beta.4 to 5.0.0`. If you see the article that matches your versions, follow it. These dedicated articles contain additional steps to upgrade your Webiny project, as sometimes there are changes in project file organization, project configs, etc.
+> When planning an upgrade, always check if there's a dedicated article for your specific Webiny version. All the articles are located in the menu on the left. For example: `5.0.0-beta.4 to 5.0.0`. If you see the article that matches your versions, follow it. These dedicated articles contain additional steps to upgrade your Webiny project, as sometimes there are changes in project file organization, project configs, etc.
 
 If there's no dedicated article, upgrades are as easy as upgrading all the `@webiny/*` packages to the desired version. 
 
