--- a/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
@@ -3,7 +3,7 @@ id: file-manager
 title: File Manager
 sidebar_label: File Manager
 keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
-description: 
+description: Learn about the Webiny File Manager features.
 ---
 
 :::tip
