--- a/docs/webiny-overview/serverless-cms/apps/form-builder.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/form-builder.mdx
@@ -2,8 +2,8 @@
 id: form-builder
 title: Form Builder
 sidebar_label: Form Builder
-keywords: ["form builder", "features"]
-description: 
+keywords: ["form builder", "no code form builder"]
+description: Learn about the Webiny Form Builder features.
 ---
 
 :::tip
