--- a/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
@@ -2,7 +2,7 @@
 id: headless-cms
 title: Headless CMS
 sidebar_label: Headless CMS
-keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
+keywords: ["headless cms", "graphql", "serverless cms", "open-source"]
 description: Webiny Serverless CMS Intro
 ---
 
