--- a/docs/webiny-overview/serverless-cms/apps/intro.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/intro.mdx
@@ -2,7 +2,7 @@
 id: intro
 title: Intro
 sidebar_label: Intro
-keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
+keywords: ["serverless", "cms", "headless cms", "graphql"]
 description: Webiny Serverless CMS Intro
 ---
 
