--- a/docs/webiny-overview/serverless-cms/apps/page-builder.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/page-builder.mdx
@@ -2,8 +2,8 @@
 id: page-builder
 title: Page Builder
 sidebar_label: Page Builder
-keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
-description: 
+keywords: ["page builder", "no code app builder", "landing page builder", "website builder"]
+description: Learn about the Webiny Page Builder features.
 ---
 
 :::tip
