fix: remove mentions of "beta" version of Webiny

--- a/docs/tutorials/webiny-cli/adding-custom-commands.mdx
+++ b/docs/tutorials/webiny-cli/adding-custom-commands.mdx
@@ -27,7 +27,7 @@ The content of this file might look something like the following:
 ```js
 // webiny.root.js
 module.exports = {
-  template: "@webiny/cwp-template-aws@5.0.0-beta.2",
+  template: "@webiny/cwp-template-aws@5.0.0",
   projectName: "homed",
   cli: {
     plugins: [
@@ -46,7 +46,7 @@ Notice the plugins required in the `cli.plugins` array. This is where we are goi
 ```js
 // webiny.root.js
 module.exports = {
-  template: "@webiny/cwp-template-aws@5.0.0-beta.2",
+  template: "@webiny/cwp-template-aws@5.0.0",
   projectName: "homed",
   cli: {
     plugins: [
