--- a/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
@@ -56,7 +56,7 @@ Besides the default built-in attributes, you can expand Webiny with custom plugi
 
 :::info
 
-Checkout the tutorial.
+Checkout the tutorial on [Creating a Webiny Headless CMS address field plugin](https://docs.webiny.com/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin).
 
 :::
 
