--- a/docs/webiny-overview/intro.mdx
+++ b/docs/webiny-overview/intro.mdx
@@ -7,7 +7,10 @@ description: Webiny Serverless CMS Intro
 ---
 
 :::tip
-What can you do with Webiny, is Webiny suitable for your use-case and which features Webiny supports.
+What you’ll learn:
+
+- What can you do with Webiny, is Webiny suitable for your use-case and which features Webiny supports.
+
 :::
 
 Webiny is a product of many trades and it can be used for many different use-cases, but each project is different and there are always variations in the requirements. Instead of us saying that Webiny can pretty much fit any use-case, we decided to write a series of short articles describing the main features of the product. In the end, you will have a good understanding of what you can do with Webiny, without spending hours in the code trying to build your use-case. 
