--- a/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
@@ -24,11 +24,11 @@ Checkout the [performance benchmark](https://docs.webiny.com/docs/webiny-overvie
 
 You can use It to power backends for business applications, mobile apps and to manage data for a website, like blogs or eCommerce stores.
 
-### Features
+## Features
 
 Headless CMS is packed with many features that make it a powerful tool anytime you need to quickly create a new API. Let’s explore some of its main features.
 
-**Content modeling**
+### Content modeling
 
 Under the term “content model” we refer to an entity that consists of one or more attributes. A typical content model would be a blog post. That content model would contain attributes such as title, slug, featured image, tags, category, and a body. 
 
@@ -60,7 +60,7 @@ Checkout the tutorial on [Creating a Webiny Headless CMS address field plugin](h
 
 :::
 
-**Validators**
+### Validators
 
 On each of the attributes, you can attach validators. This allows you to define which fields are required and what values, or patterns, of values a field can take.
 
@@ -77,7 +77,7 @@ The Headless CMS has 3 APIs which are expanded dynamically every time you create
 
 You can explore the queries and mutations available under each of the APIs inside the Admin Panel by accessing the API Playground from the main menu.
 
-**Security**
+### Security
 
 From the security module in the main menu, you can control the access levels for both user groups as well as API tokens. 
 
@@ -85,11 +85,11 @@ For the Headless CMS, the security implementation allows you to define access to
 
 When it comes to API tokens, you can also limit them to a particular endpoint alongside all the above-mentioned options. 
 
-**Multi-language**
+### Multi-language
 
 All apps inside Webiny are multi-language. The multi-language implementation is done in a way that each language is fully independent in terms of content and content models. This approach is the most flexible in terms of what you can do with it as each language can have a completely different content and structure. The tradeoff is that in some cases there will be some manual coding required say if you are reading an article in German and you want to switch to the same article in English. This switching logic and linking the German and English entry would be up to you to implement. 
 
-**Scale and performance**
+### Scale and performance
 
 There are 2 main operations that you can do on the Headless CMS which will define your scale factors. First is the write operation on the Manage API. These operations trigger a lambda function which then writes a record into DynamoDB. As you can imagine, this flow can easily handle thousands of requests per second. The data from DynamoDB is then written in batches into Elasticsearch service via a DynamoDB stream. 
 
@@ -109,7 +109,7 @@ For an in-depth performance benchmark checkout the [performance benchmark](https
 
 :::
 
-### When to consider Webiny’s Headless CMS
+## When to consider Webiny’s Headless CMS
 
 Here are some key differentiators for when you should consider using Webiny’s Headless CMS:
 
