fix(tutorials): intro updates according to svens comments

--- a/docs/tutorials/create-an-application/intro.mdx
+++ b/docs/tutorials/create-an-application/intro.mdx
@@ -7,6 +7,7 @@ description: Introduction into how to quickly create and deploy API and Admin ar
 ---
 
 :::tip WHAT YOU’LL LEARN
+- how to get started with building a Webiny app
 - what are scaffolds
 - how to run scaffolding
 :::
@@ -19,23 +20,31 @@ You can read on how to install it in our [Install Webiny](../install-webiny) art
 
 ## Scaffold
 
-You will use `yarn webiny scaffold` to start the scaffolding, and you run it from the root of the project.
-The process is quite simple as we show you a list of possible scaffolds which you can select.
-We then show you a question by question or a statement by statement and you provide some answer to it.
+Scaffolding is the easiest way to build apps and APIs in Webiny.
+Using a scaffold you will generate your app or an API.
+You will get all of the required code automatically created for you.
+This is a great starting point, as then you can just modify and adapt the code to your needs, without dealing with much of the boilerplate work.
 
-For example, in our API scaffold process you have a request: `Enter the name of the initial data model`. You just need to type the name of the data model, let's say `Car`.
-Continue through the rest of the questions until the scaffolding process is done.
+There are several scaffolds that ship with Webiny, including the Admin area scaffold and the API scaffold, which we will explore more in this tutorial.
+All scaffolds have a wizard that guides you through the process by asking you a set of simple questions.
+More on that in the actual tutorial.
+
+:::note
+You can add your own custom scaffolds by building a [CLI plugin](../webiny-cli/adding-custom-commands) and using the current scaffold plugin as a [reference](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/src/index.ts).
+:::
 
 ## Workspaces
 
-For you to be able to import the package into the API or Admin app it must be linked to the `node_modules`.
-It is done automatically by our [linkWorkspaces](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/scripts/linkWorkspaces.js) script which is called by `yarn postinstall`.
-
+For you to be able to import the generated packages into your application they must be linked to the `node_modules`.
+It is done automatically by our [linkWorkspaces](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/scripts/linkWorkspaces.js) script and is called by `yarn postinstall`.
 Also, you can run `yarn link-workspaces` manually to link the packages.
 
-Remember, packages you want linked must be in root **project.json** `workspaces.packages` array.
+To find out more about workspaces read the official yarn [docs](https://classic.yarnpkg.com/en/docs/workspaces/).
 
-##### Linking packages that are not in **packages** directory
-If you are linking packages in a directory that is not `packages`, you must add that directory in the `whitelist` array.
+Remember, packages you want to link must be in root **package.json** `workspaces.packages` array.
+
+:::warning
+If you are creating packages in a directory that is not your projects `./packages/` directory, you must add that directory to the `whitelist` array in the `./scripts/linkWorkspaces.js`, otherwise linking will not work.
+:::
 
 
