refactor(tutorials): intro to introduction rename

--- a/docs/tutorials/create-an-application/introduction.mdx
+++ b/docs/tutorials/create-an-application/introduction.mdx
@@ -1,7 +1,7 @@
 ---
-id: create-an-application-intro
-title: Intro
-sidebar_label: Intro
+id: introduction
+title: Introduction
+sidebar_label: Introduction
 keywords: ["webiny", "scaffold", "boilerplate", "api", "admin"]
 description: Introduction into how to quickly create and deploy API and Admin area applications.
 ---
