--- a/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
@@ -95,7 +95,7 @@ There are 2 main operations that you can do on the Headless CMS which will defin
 
 The second operation is the read operation, which comes when you interact with the Read or the Preview API. In this case, it’s a Lambda function that interacts with Elasticsearch, there is no DynamoDB. 
 
-:::info
+:::tip
 
 The only time when Webiny uses DynamoDB to fetch items from the database is when you are requesting a particular item via the primary key. 
 
