--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -13,21 +13,27 @@ description: Quickly create and deploy API package.
 
 
 ## Prerequisites
-Before you start this tutorial, make sure that you have Webiny installed and to read our [Intro](./create-an-application-intro) tutorial.
+Before you start this tutorial, make sure that you have Webiny installed and to read our [Introduction](./introduction) tutorial.
 
 
 ## Overview
-The API scaffold is our boilerplate code that works out of the box without you needing to actually write any code.
+The API scaffold is our boilerplate GraphQL API that works out of the box without you needing to actually write any code.
+It will enable you to create, update and delete the data in the database and fetch it via get and list API endpoints.
 In this article we will go through the process of generating the code.
 
-The command you will need is `yarn webiny scaffold`.
+The command you will run is `yarn webiny scaffold`, and you run it from the project root.
 
-In our example we will use `CarManufacturer` as our reference.
+You will get a set of simple questions to answer and, in the end, an API package will be generated.
+
+Also note that in this tutorial we will use `CarManufacturer` as our data model name.
 
 ## Running the Scaffold
 Run the scaffold command and follow the questions. Let's go through all the questions in detail:
 ##### 1. Enter the name of the initial data model
-Name of the API data model. The GraphQL queries, mutations, responses, and variable names in the code will use this value in singular and plural, kebab-case, camel-case or some other form.
+This is the name of your API data model, so type it in.
+As mentioned before, we will use `CarManufacturer` in this tutorial.
+
+The GraphQL queries, mutations, responses, and variable names in the code will use this value in singular and plural, kebab-case, camel-case or some other form.
 
 ```graphql title="graphql.ts"
 type CarManufacturer {
@@ -46,29 +52,33 @@ type CarManufacturerListResponse {
 }
 ```
 
-The name value is used to create both the defaults for the package location and the package name.
+The name value is also used to create both the defaults for the package location and the package name.
 
 The initial data model has 3 fields (`title`, `description` and `isNice`) to show you how to structure your data model.
 
-Validation of the data model name allows only a-z and A-Z.
+Validation of the data model name allows only **a-z** and **A-Z**.
 You can name your model all lowercase or all uppercase. It is up to you - but try to keep it in pascal-case.
 
 ##### 2. Enter the package location
-A full location of the package from the root of the project. A data model name value given in the previous question is used to create the default package location.
+A full location of the package, where the package files will be generated, from the root of the project.
+:::info
+The value given in the previous question is used to create the default package location.
+:::
 
-We think it is best to organize your packages in `packages` directory, so by default it is set into that directory, but you can change it to whatever you want.
+We think it is best to organize your packages in `packages` directory, so by default it is set into that directory, but you can type whatever location you want.
+:::note
+To learn more about Webiny's project organization, checkout [this](../../key-topics/project-organization/project-applications-and-packages) article.
+:::
 
-The default value is `packages/car-manufacturers/api`. Notice that the data model name `CarManufacturer` is in plural and kebab-cased.
-
-Validation of the package location checks only if the given directory already exists.
+The default value is `packages/car-manufacturers/api`, and notice that the data model name `CarManufacturer` is in plural and kebab-cased.
 
 ##### 3. Enter the package name
-The package name that you reference to in the code. As in the location step, the data model name value is used to create the default package name.
+The package name that you will reference to in the code.
+:::info
+As in the location step, the value from the first question is used to create the default package name.
+:::
 
 The default value is `@car-manufacturers/api` as we like scoping packages. You can set it to what ever you want, providing it is passing the validation.
-
-Validation of the package name is done via the `validate-npm-package-name` package.
-
 
 ## The Code
 Generated code contains:
@@ -86,10 +96,11 @@ Although the DynamoDB is the database the data is being stored to, it does not p
 
 If you do not want to use it you will need to modify the code a bit for it to work without the Elasticsearch.
 
-If you want to use the Elasticsearch functionality, that is provided with the generated code, you must run install mutation described in the information after the code was generated. This will create the Elasticsearch index for your data.
-
+If you want to use the Elasticsearch functionality, that is provided with the generated code, you must run a GraphQL install mutation described in the information after the code was generated. This will create the Elasticsearch index for your data.
 
 ## Testing
+The API scaffold generates initial GraphQL API tests for you. As you add or remove functionality from the code, tests should reflect those changes, so you can be sure that API is working as intended.
+
 You can run tests locally with command `ELASTICSEARCH_PORT=9200 LOCAL_ELASTICSEARCH=true yarn test packages/car-manufacturers/api` or `yarn test packages/car-manufacturers/api`, if you removed the Elasticsearch.
 
 Tests are Jest based and files must end in `.test.ts` to be run.
@@ -108,7 +119,7 @@ import carManufacturerPlugin from "@car-manufacturers/api";
 carManufacturerPlugin()
 ```
 ## Deploy the API
-Use the deploy command to deploy the API:
+To use the generated GraphQL API, you must deploy it. To deploy, use the command:
 ```
 yarn webiny deploy api --env YOUR_ENVIRONMENT
 ```
